<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.v_maximum_profit.floor1.ProfitListFragment">
    <ScrollView
        android:id="@+id/scrollview_profit_list"
        android:enabled="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_combination_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/min_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/min_combination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_combination_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="@dimen/margin"
                android:hint="@string/max_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_combination_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/max_combination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/frameRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="40dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_combination_label">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearlayout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameRecyclerView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:enabled="false"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Button
                    android:id="@+id/go_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:enabled="false"
                    android:visibility="gone" />
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    </ScrollView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:enabled="false"
            android:visibility="gone"
            android:textSize="@dimen/empty_list"
            android:text="@string/empty_menu"
            android:textAlignment="center"
            tools:text="Cogs and Widgets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>