<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="resepName"
            type="String" />
        <variable
            name="resepQuantity"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_between_elements"
        tools:context=".view.v_ingredient_inventory.floor2.IngredientDetailFragment">

        <RelativeLayout
            android:id="@+id/relativeLayoutCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin"
                app:cardBackgroundColor="@color/box_color_top1"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/recipe_name"
                        style="@style/Widget.Masterchef.ListItemTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/box_color_top2"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/margin_between_elements"
                        android:text="@{@string/detail_recipe_name(resepName)}"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Cogs and Widgets" />

                    <TextView
                        android:id="@+id/recipe_count"
                        style="@style/Widget.Masterchef.ListItemTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/box_color_bottom2"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/margin_between_elements"
                        android:text="@{@string/detail_recipe_quantity(resepQuantity)}"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recipe_name"
                        tools:text="3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearlayout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/edit_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutCard">

            <Button
                android:id="@+id/add_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/increase_stock"
                android:enabled="false"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <Button
                android:id="@+id/delete_recipe"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:enabled="false"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_recipe" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/edit_recipe"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white"
            android:enabled="false"
            android:visibility="gone"
            android:layout_marginRight="@dimen/margin_between_elements" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>